@@ -1,5 +1,6 @@
 Version 2.00.27 -
 ====================================
+  Improve filter debug mesgs.
 
 Version 2.00.26 - 23rd November 2004
 ====================================
